# Suitium

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cmake-linux.yml
Modules/glad/: glad.c
Modules/glad/include/glad/: glad.h  glad.hpp
Suitium/: Addon.cpp  Addon.hpp  Address.cpp  Address.hpp  AddressInterface.cpp  AddressInterface.hpp  AddressInterfaceWin32Client.cpp  AddressInterfaceWin32Client.hpp  Addresses.cpp  Addresses.hpp  CMakeLists.txt  Hooks.cpp  Hooks.hpp  Hotfixes.cpp  Hotfixes.hpp  Linux.cpp  LuaManager.cpp  LuaManager.hpp  MasterServer.cpp  MasterServer.hpp  README.md  TypeManager.cpp  TypeManager.hpp  Version.cpp  Version.hpp  Win32.cpp
Suitium/api/: Api.hpp  Common.hpp  Logging.cpp  Logging.hpp  Text.cpp  Text.hpp
Suitium/hooks/: CSDrawAtlasEntry.hpp  CSDrawText.hpp  ClientMain.hpp  ConnectMasterServer.hpp  CreateItem.hpp  CreateVehicle.hpp  DrawMainMenu.hpp  DrawMenu.hpp  DrawMenuButton.hpp  DrawMenuButtonSelectable.hpp  DrawMenuList.hpp  DrawMenuSlider.hpp  DrawMenuTextBox.hpp  DrawMenuToggle.hpp  DrawText.hpp  LoadServer.hpp  MainMenu.hpp  Printf.hpp  ResetGame.hpp  ServerMain.hpp  SetupItemTypes.hpp  SetupVehicleTypes.hpp
Suitium/structs/: CSKeyboard.hpp  CSTexture.hpp  Common.hpp  Human.cpp  Human.hpp  Item.cpp  Item.hpp  ItemType.cpp  ItemType.hpp  Vehicle.cpp  Vehicle.hpp  VehicleType.cpp  VehicleType.hpp
SuitiumLauncher/: CMakeLists.txt  README.md  Win32.c
Tools/: cmake_linux.sh  cmake_win32.bat  setup_linux.sh  setup_win32.bat  test_win32.bat
shared/sol/: config.hpp
